# QTcpPlanetWars

./: CMakeLists.txt  README  fleet.cpp  fleet.h  game.cpp  game.h  gamescene.cpp  gamescene.h  gamewidget.cpp  gamewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  planet.cpp  planet.h  player.cpp  player.h  settings.cpp  settings.h
ui/: gamewidget.ui  mainwindow.ui
